# 3d_scan_object

./: NOT_ok_OUT.avi  README.md  ok_OUT.avi  scanner.py  utils.py
app/GLOSampleApp/: .project
app/GLOSampleApp/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/GLOSampleApp/app/src/androidTest/java/com/example/jinay/glosampleapp/: ExampleInstrumentedTest.java
app/GLOSampleApp/app/src/main/: AndroidManifest.xml
app/GLOSampleApp/app/src/main/cpp/: native-lib.cpp  native-lib.h
app/GLOSampleApp/app/src/main/java/com/example/jinay/glosampleapp/: MainActivity.java
app/GLOSampleApp/app/src/main/jniLibs/: arm64-v8a  armeabi  armeabi-v7a  mips  mips64  x86  x86_64
app/GLOSampleApp/app/src/main/res/layout/: activity_main.xml
app/GLOSampleApp/app/src/main/res/values/: strings.xml
app/GLOSampleApp/app/src/test/java/com/example/jinay/glosampleapp/: ExampleUnitTest.java
app/GLOSampleApp/gradle/wrapper/: gradle-wrapper.properties
app/GLOSampleApp/openCVLibrary320/: .project
cpp/: CMakeLists.txt  main.cpp
cpp/include/: multiscan.hpp  scan.hpp
cpp/src/: scan.cpp
data/: Not_ok.avi  ok.avi
python/: scanner.py  utils.py
